--- a/oasis.core/build.gradle
+++ b/oasis.core/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     })
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     testCompile 'junit:junit:4.12'
 }
