--- a/oasis.core/src/main/AndroidManifest.xml
+++ b/oasis.core/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.touggourti.oasis">
 
     <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:name=".oaApp">
 
     </application>
 
